# expense-tracker

./: .gitignore  GEMINI.md  bug1.txt  bug2.txt  pyproject.toml
ai/ollama/: README.md  architectural_review.md  client.py  config.py  factory.py  future_scalling.md  test_connection.py
core/database/: __init__.py  crud.py  db_interface.py  db_manager.py  default_categories.json  model.py  seeder.py  utility.py
core/parsers/: csv_parser.py  pdf_parser.py
core/processors/: __init__.py  abstract_processor.py  ai_data_processor.py  architectural_code_review.md  column_mapper.py  dashboard_processor.py  data_cleaner.py  data_processor.py  data_validator.py  enhanced_ai_data_processor.py  exceptions.py  rule_based_data_processor.py  schemas.py
frontend/: app.py
frontend/tabs/: dashboard_tab.py  settings_tab.py  statement_input_tab.py
planning/: pdf_upload_sequence.md  system_architecture.md
planning/db_model/: db_interface_micro_architecture.md  db_manager_micro_architecture.md
planning/frontend/: dashboard_tab_arch.md  frontend_micro_architecture.md  navigation_review.md  ollama_integration_strategy.md  pdf_upload_sequence.md  settings_tab_arch.md  statement_input_tab_arch.md
planning/parsers/: pdf_parser_micro_architecture.md
planning/processors/: ai_data_processor_micro_architecture.md  data_processor_micro_architecture.md  database_seeding_strategy.md  enhanced_ai_data_processor_micro_architecture.md  processor_ollama_config_integration.md  processor_output_schema.md
tests/db_tests/: conftest.py  test_category_crud.py  test_db_interface.py  test_plan.md  (+1 more)
(+30 files in other folders)
