[project]
name = "expenses-tool2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "requests>=2.32.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "streamlit-option-menu",
]
